Cleanup and warning fixes